--- a/column-builder/env.example
+++ b/column-builder/env.example
@@ -1,9 +1,11 @@
 ## place this into an .env.development file in this directory!!
 NEXT_PUBLIC_SERVER_URL=http://localhost:3001
 NEXT_PUBLIC_CLIENT_URL=http://localhost:3001
+NEXT_PUBLIC_TOPOLOGY_URL=http://localhost:1235
 NEXT_PUBLIC_BASE_URL=
 
 ## .env.production
 NEXT_PUBLIC_SERVER_URL=http://postgrest:3001
 NEXT_PUBLIC_CLIENT_URL=http://localhost:3001
+NEXT_PUBLIC_TOPOLOGY_URL=http://localhost:1235
 NEXT_PUBLIC_BASE_URL=/dacite
