--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "deps/ui-components"]
-	path = deps/ui-components
-	url = https://github.com/UW-Macrostrat/ui-components.git
+	path = deps/web-components
+	url = https://github.com/UW-Macrostrat/web-components.git
