--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,18 @@
       "~/*": ["./src/*"],
       "@macrostrat/cesium-viewer": ["packages/cesium-viewer/src/"],
       "@macrostrat/cesium-martini": ["packages/cesium-martini"],
-      "@macrostrat/ui-components": ["deps/ui-components/packages/ui-components/src/"],
-      "@macrostrat/column-components": ["deps/ui-components/packages/column-components/src/"],
-      "@macrostrat/map-components": ["deps/ui-components/packages/map-components/src/"],
-      "@macrostrat/map-styling": ["deps/ui-components/packages/map-styling/src/"],
+      "@macrostrat/ui-components": [
+        "deps/web-components/packages/ui-components/src/"
+      ],
+      "@macrostrat/column-components": [
+        "deps/web-components/packages/column-components/src/"
+      ],
+      "@macrostrat/map-components": [
+        "deps/web-components/packages/map-components/src/"
+      ],
+      "@macrostrat/map-styling": [
+        "deps/web-components/packages/map-styling/src/"
+      ]
     }
   },
   "include": ["src"]
