--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,12 @@ geologic-patterns
 .env
 Dockerfile
 docker-compose.yaml
+
+# For yarn v2 with Plug'n'Play
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
