--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "@lagunovsky/redux-react-router": "^3.2.0",
     "@loadable/component": "^5.14.1",
     "@macrostrat/column-components": "*",
-    "@macrostrat/map-styling": "^1.0.0",
     "@macrostrat/hyper": "^2.2.1",
+    "@macrostrat/map-styling": "^1.0.0",
     "@macrostrat/ui-components": "^1",
     "@mapbox/point-geometry": "^0.1.0",
     "@mapbox/vector-tile": "^1.3.1",
@@ -96,5 +96,6 @@
     "use-react-router-breadcrumbs": "^3.2.1",
     "use-resize-observer": "^8.0.0"
   },
-  "prettier": {}
+  "prettier": {},
+  "packageManager": "yarn@3.2.2"
 }
