--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "html-webpack-plugin": "^5.3.2",
     "lerna": "^3.22.1",
     "mini-css-extract-plugin": "^2.4.5",
+    "prettier": "^2.7.1",
     "react-hot-loader": "^4.13.0",
     "sass": "^1.49.0",
     "sass-loader": "^12.4.0",
@@ -57,8 +58,8 @@
     "@loadable/component": "^5.14.1",
     "@macrostrat/column-components": "*",
     "@macrostrat/hyper": "^2.2.1",
-    "@macrostrat/mapbox-styles": "^1.0.0",
     "@macrostrat/mapbox-react": "*",
+    "@macrostrat/mapbox-styles": "^1.0.0",
     "@macrostrat/mapbox-utils": "*",
     "@macrostrat/ui-components": "^1",
     "@mapbox/point-geometry": "^0.1.0",
