--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "@mapbox/vector-tile": "^1.3.1",
     "@mdx-js/loader": "^1.6.22",
     "@types/react-redux": "^7.1.7",
+    "@visx/axis": "^2.14.0",
+    "@visx/scale": "^2.2.2",
     "axios": "^0.25.0",
     "classnames": "^2.2.6",
     "d3": "^4.13.0",
