--- a/package.json
+++ b/package.json
@@ -70,7 +70,6 @@
     "@mapbox/point-geometry": "^0.1.0",
     "@mapbox/vector-tile": "^1.3.1",
     "@mdx-js/loader": "^1.6.22",
-    "@open-wc/webpack-import-meta-loader": "^0.4.7",
     "@types/cesium": "^1.67.4",
     "@types/react-redux": "^7.1.7",
     "@visx/axis": "^2.14.0",
@@ -78,7 +77,7 @@
     "@znemz/cesium-navigation": "^4.0.0",
     "axios": "^0.25.0",
     "browserify-zlib": "^0.2.0",
-    "cesium": "1.81.0",
+    "cesium": "^1.98.1",
     "classnames": "^2.2.6",
     "d3": "^4.13.0",
     "d3-array": "^3.1.1",
@@ -109,7 +108,7 @@
     "reduce-reducers": "^1.0.4",
     "redux": "^4.0.5",
     "regl": "^1.5.0",
-    "resium": "1.13.1",
+    "resium": "^1.13.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "topojson-client": "^3.0.0",
