--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "bootstrap": "yarn"
   },
   "workspaces": [
-    "deps/web-components/packages/*",
-    "packages/*"
+    "deps/web-components/packages/*"
   ],
   "authors": [
     "John Czaplewski <jczaplewski@wisc.edu>",
@@ -23,18 +22,14 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
-    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/preset-react": "^7.9.4",
-    "@babel/preset-typescript": "^7.9.0",
+    "@babel/core": "^7.19.6",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-typescript": "^7.18.6",
     "@macrostrat/revision-info-webpack": "^1.0.0",
     "@types/node": "^13.13.5",
-    "babel-loader": "^8.0.4",
-    "babel-polyfill": "^6.26.0",
+    "babel-loader": "^8.2.3",
     "copy-webpack-plugin": "^11.0.0",
+    "core-js": "^3.26.0",
     "css-loader": "^6.2.0",
     "dotenv": "^16.0.1",
     "file-loader": "^6.2.0",
@@ -43,6 +38,7 @@
     "mini-css-extract-plugin": "^2.4.5",
     "prettier": "^2.7.1",
     "react-hot-loader": "^4.13.0",
+    "regenerator-runtime": "^0.13.10",
     "sass": "^1.49.0",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.2.1",
@@ -57,9 +53,9 @@
     "@blueprintjs/core": "^3.7.0",
     "@lagunovsky/redux-react-router": "^3.2.0",
     "@loadable/component": "^5.14.1",
-    "@macrostrat/cesium-martini": "^1.2.2",
-    "@macrostrat/cesium-vector-provider": "workspace:*",
-    "@macrostrat/cesium-viewer": "*",
+    "@macrostrat/cesium-martini": "^1.2.3",
+    "@macrostrat/cesium-vector-provider": "^2.0.0",
+    "@macrostrat/cesium-viewer": "^1.0.2",
     "@macrostrat/column-components": "*",
     "@macrostrat/hyper": "^2.2.1",
     "@macrostrat/mapbox-react": "*",
@@ -87,12 +83,10 @@
     "geologic-patterns": "git+https://github.com/davenquinn/geologic-patterns.git",
     "gl-matrix": "^3.3.0",
     "history": "^5.3.0",
-    "https-browserify": "^1.0.0",
     "immutability-helper": "^2.8.1",
     "isomorphic-fetch": "^2.2.1",
     "mapbox-gl": "^2.9.1",
     "mapbox-gl-controls": "^2.3.5",
-    "maplibre-gl": "workspace:*",
     "new-github-issue-url": "^1.0.0",
     "path-browserify": "^1.0.1",
     "pbf": "^3.2.1",
