--- a/package.json
+++ b/package.json
@@ -112,5 +112,6 @@
     "use-resize-observer": "^8.0.0"
   },
   "prettier": {},
-  "packageManager": "yarn@3.2.2"
+  "packageManager": "yarn@3.2.2",
+  "browserslist": "defaults, not ie 11"
 }
