--- a/column-builder/package.json
+++ b/column-builder/package.json
@@ -5,36 +5,39 @@
     "dev": "next dev -p 1234",
     "build": "next build",
     "start": "next start -p 1234",
-    "lint": "next lint",
-    "postinstall": "(npm install deps/web-components/packages/ui-components/); (npm install deps/web-components/packages/form-components/); (npm install deps/web-components/packages/data-components/);"
+    "lint": "next lint"
   },
   "dependencies": {
     "@blueprintjs/core": "^4.3.0",
     "@blueprintjs/popover2": "^1.2.1",
     "@blueprintjs/select": "^4.4.1",
-    "@macrostrat/data-components": "file:deps/web-components/packages/data-components",
-    "@macrostrat/form-components": "file:deps/web-components/packages/form-components",
+    "@macrostrat/column-components": "workspace:*",
+    "@macrostrat/data-components": "workspace:*",
+    "@macrostrat/form-components": "workspace:*",
     "@macrostrat/hyper": "^2.0.1",
-    "@macrostrat/ui-components": "file:deps/web-components/packages/ui-components",
+    "@macrostrat/ui-components": "workspace:*",
     "@mapbox/mapbox-gl-draw": "^1.3.0",
     "@supabase/postgrest-js": "^0.36.0",
     "@types/mapbox__mapbox-gl-draw": "^1.2.3",
     "axios": "^0.27.2",
     "mapbox-gl": "^2.8.2",
-    "next": "12.0.8",
+    "next": "^12.0.8",
     "next-transpile-modules": "^9.0.0",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-color": "^2.19.3",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "sass": "^1.49.0"
   },
+  "workspaces": [
+    "./deps/web-components/packages/*"
+  ],
   "devDependencies": {
-    "@types/node": "17.0.10",
-    "@types/react": "17.0.38",
+    "@types/node": "^17.0.10",
+    "@types/react": "^17.0.38",
     "@types/react-beautiful-dnd": "^13.1.2",
-    "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8",
-    "typescript": "4.5.4"
+    "eslint": "^8.7.0",
+    "eslint-config-next": "^12.0.8",
+    "typescript": "^4.5.4"
   }
 }
