--- a/column-builder/package.json
+++ b/column-builder/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@blueprintjs/core": "^4.3.0",
+    "@blueprintjs/icons": "^4.10.1",
     "@blueprintjs/popover2": "^1.2.1",
     "@blueprintjs/select": "^4.4.1",
     "@macrostrat/column-components": "workspace:*",
@@ -21,23 +22,24 @@
     "@types/mapbox__mapbox-gl-draw": "^1.2.3",
     "axios": "^0.27.2",
     "mapbox-gl": "^2.8.2",
-    "next": "^12.0.8",
+    "next": "^12.3",
     "next-transpile-modules": "^9.0.0",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
-    "sass": "^1.49.0"
+    "sass": "^1.56.1"
   },
   "workspaces": [
     "./deps/web-components/packages/*"
   ],
   "devDependencies": {
     "@types/node": "^17.0.10",
-    "@types/react": "^17.0.38",
+    "@types/react": "^17",
     "@types/react-beautiful-dnd": "^13.1.2",
     "eslint": "^8.7.0",
     "eslint-config-next": "^12.0.8",
     "typescript": "^4.5.4"
-  }
+  },
+  "packageManager": "yarn@3.3.0"
 }
