--- a/column-builder/package.json
+++ b/column-builder/package.json
@@ -21,6 +21,7 @@
     "@supabase/postgrest-js": "^0.36.0",
     "@types/mapbox__mapbox-gl-draw": "^1.2.3",
     "axios": "^0.27.2",
+    "cross-fetch": "^3.1.5",
     "mapbox-gl": "^2.8.2",
     "next": "^12.3",
     "next-transpile-modules": "^9.0.0",
