--- a/column-builder/package.json
+++ b/column-builder/package.json
@@ -40,7 +40,9 @@
     "@types/react-beautiful-dnd": "^13.1.2",
     "eslint": "^8.7.0",
     "eslint-config-next": "^12.0.8",
+    "prettier": "^2.8.1",
     "typescript": "^4.5.4"
   },
+  "prettier": {},
   "packageManager": "yarn@3.3.0"
 }
