--- a/package.json
+++ b/package.json
@@ -56,35 +56,34 @@
     "@blueprintjs/core": "^4.14.1",
     "@lagunovsky/redux-react-router": "^3.2.0",
     "@loadable/component": "^5.14.1",
-    "@macrostrat/column-components": "*",
+    "@macrostrat/column-components": "workspace:*",
     "@macrostrat/hyper": "^2.2.1",
-    "@macrostrat/mapbox-react": "*",
-    "@macrostrat/mapbox-styles": "^1.0.0",
-    "@macrostrat/mapbox-utils": "*",
-    "@macrostrat/ui-components": "^1",
+    "@macrostrat/mapbox-react": "workspace:*",
+    "@macrostrat/mapbox-styles": "workspace:*",
+    "@macrostrat/mapbox-utils": "workspace:*",
+    "@macrostrat/ui-components": "workspace:*",
     "@mapbox/point-geometry": "^0.1.0",
     "@mapbox/vector-tile": "^1.3.1",
     "@mdx-js/loader": "^1.6.22",
+    "@mdx-js/react": "^1.5",
     "@types/react-redux": "^7.1.7",
     "@visx/axis": "^2.14.0",
     "@visx/scale": "^2.2.2",
     "axios": "^0.25.0",
+    "chroma-js": "^2.4.2",
     "classnames": "^2.2.6",
-    "d3": "^4.13.0",
     "d3-array": "^3.1.1",
+    "d3-axis": "^3.0.0",
     "d3-format": "^1.4.4",
     "d3-geo": "^3.0.1",
-    "d3-jetpack": "^2.0.19",
-    "geologic-patterns": "git+https://github.com/davenquinn/geologic-patterns.git",
-    "gl-matrix": "^3.3.0",
+    "d3-scale": "^4.0.2",
+    "d3-selection": "^1.0.0",
+    "d3-shape": "^3.2.0",
     "history": "^5.3.0",
-    "immutability-helper": "^2.8.1",
-    "isomorphic-fetch": "^2.2.1",
+    "immutability-helper": "^3.1.1",
     "mapbox-gl": "^2.11.0",
     "mapbox-gl-controls": "^2.3.5",
     "new-github-issue-url": "^1.0.0",
-    "pbf": "^3.2.1",
-    "prop-types": "^15.6.0",
     "react": "^18.2.0",
     "react-animate-height": "^0.10.9",
     "react-cookie": "^3.0.4",
@@ -94,11 +93,11 @@
     "react-router-dom": "^6.3.0",
     "reduce-reducers": "^1.0.4",
     "redux": "^4.0.5",
+    "supports-color": "^9.3.1",
     "topojson-client": "^3.0.0",
     "transition-hook": "^1.5.2",
-    "urijs": "^1.19.2",
     "use-react-router-breadcrumbs": "^3.2.1",
-    "use-resize-observer": "^8.0.0"
+    "use-resize-observer": "^9.1.0"
   },
   "prettier": {},
   "packageManager": "yarn@3.2.2"
