--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "moduleResolution": "node",
     "target": "es5",
     "module": "es2020",
-    "lib": ["es2015", "es2016", "es2017", "dom"],
+    "lib": ["es2018", "dom"],
     "strict": false,
     "sourceMap": true,
     "declaration": true,
