--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "react-redux": "^7.2.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
+    "react-router-hash-link": "^2.4.3",
     "reduce-reducers": "^1.0.4",
     "redux": "^4.0.5",
     "supports-color": "^9.3.1",
